[project]
name = "websitechatbotbackend"
version = "0.1.0"
description = "FastAPI backend for personal website AI chatbot (Hugging Face router + DeepSeek)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openai>=1.57.0",
    "pydantic-settings>=2.6.0",
]
